--- a/eBookManager/Views/Account/ChangePassword.cshtml
+++ b/eBookManager/Views/Account/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 
 <h2 class="margin-bot-20" style="text-align:center">Thay đổi mật khẩu</h2>
 
-<form action="/Account/ChangePassword" method="post">
+<form id="form-data" @*action="/Account/ChangePassword" method="post"*@>
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Mật khẩu mới <span class="required">*</span></label></div>
         <div class="col-lg-8">
@@ -16,13 +16,33 @@
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Xác nhận mật khẩu <span class="required">*</span></label></div>
         <div class="col-lg-8">
-            <input class="form-control  width-300" type="password" name="Password" />
+            <input class="form-control  width-300" type="password" />
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8"></label></div>
         <div style="float:left;width:300px">
-            <button class="btn btn-primary pull-right" type="submit">Thay đổi</button>
+            <a type="button" class="btn btn-primary pull-right" onclick="changePass()">Thay đổi</a>
         </div>
     </div>
 </form>
+<script>
+    function changePass() {
+        debugger
+        $.ajax({
+            type: "POST",
+            url: '/Account/ChangePassword?' + $("#form-data").serialize(),
+            dataType: "json",
+            success: function (response) {
+                debugger
+                alert(response);
+                setTimeout(function () {
+                    window.location.href = "/Account/AccountInfo";
+                }, 1000);
+            },
+            error: function (error) {
+
+            }
+        });
+    }
+</script>
