--- a/eBookManager/Views/Account/Create.cshtml
+++ b/eBookManager/Views/Account/Create.cshtml
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
-        <div class="col-lg-4"><label class="pull-right pad-top-8">Họ và tên</label></div>
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Họ và tên <span class="required">*</span></label></div>
         <div class="col-lg-8">
             <input class="form-control width-300" type="text" value="@Model.Name" name="Name" />
         </div>
@@ -54,7 +54,6 @@
             <input class="form-control width-300" type="text" value="@Model.Role" name="Role" />
         </div>
     </div>
-
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8"></label></div>
         <div style="float:left;width:300px">
